--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
-name = "luexks_reassembly_2"
+name = "luexks_reassembly"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 lazy_static = "1.5.0"
+
+[lib]
+name = "luexks_reassembly"
+path = "src/lib.rs"
